# csi6900-mask-conditioned-placement

./: .gitignore  README.md  csi6900_timeline.md  pyproject.toml
phase1/: REPORT.md  benchmark_targets.py  inspect_env.py  place_1.py  plot_curve.py  render_place.py  train_place.py
scripts/: benchmark.py  dissect_env.py1  explore.py  pick_with_comment.py  place_env.py  smoke_place.py  smoke_test.py  train.py
